
                     ngIRCd - Next Generation IRC Server

                      (c)2001-2004 by Alexander Barton,
                    alex@barton.de, http://www.barton.de/

               ngIRCd is free software and published under the
                   terms of the GNU General Public License.

                               -- ChangeLog --


ngIRCd CVSHEAD

  - INVITE- and BAN-lists become synchronized between IRC+ servers when
    establishing new connections, if the peer supports this as well.
  - Reorganized autogen.sh and configure scripts.
  - Fixed a wrong assert() which could cause the daemon to exit spuriously
    when closing down connections.
  - Better logging of decompression errors returned by zlib.
  - Servers other than the destination server didn't clean up the invite
    list of an "invite-only" channel properly when an INVITE'd user joined.
  - Changed the reply of the MODE command to match the syntax of the
    original ircd exactly: the unnecessary but missing ":" before the last
    parameter has been added.
  - Fixed TRACE: don't output "Serv" lines for ourself; display more info.
  - Results of the resolver (hostnames and IDENT names) are discarded after
    the client is successfully registered with the server.
  - Better logging while establishing and shutting down connections.
  - The type of service (TOS) of all sockets is set to "interactive" now.
  - Added short command line option "-t" as alternative to "--configtest".
  - Added optional support for "IDENT" lookups on incoming connections. You
    have to enable this function with the ./configure switch "--with-ident".
    The default is not to do IDENT lookups.

ngIRCd 0.7.7 (2004-02-05)

  - The info text ("real name") of users is set to "-" if none has been
    specified using the USER command (e. g. "USER user * * :"). Reason:
    the original ircd doesn't like empty ones and would KILL such users.
  - Fixed (optional) TCP Wrapper test which was broken and could result in