@@ -1,4 +1,4 @@
-# $Id: sample-ngircd.conf,v 1.25 2003/12/19 14:32:59 alex Exp $
+# $Id: sample-ngircd.conf,v 1.26 2004/05/07 11:19:20 alex Exp $
 
 #
 # This is a sample configuration file for the ngIRCd, which must be adepted
@@ -45,6 +45,10 @@
 	# be shown to all users connecting to the server:
 	;MotdFile = /usr/local/etc/ngircd.motd
 
+	# A simple Phrase (<256 chars) if you don't want to use a motd file.
+	# If it is set no MotdFile will be read at all.
+	;MotdPhrase = "Hello world!"
+
 	# User ID under which the server should run; you can use the name
 	# of the user or the numerical ID. ATTENTION: For this to work the
 	# server must have been started with root privileges! In addition,
@@ -56,6 +60,13 @@
 	# of the group or the numerical ID. ATTENTION: For this to work the
 	# server must have been started with root privileges!
 	;ServerGID = 65534
+
+	# A directory to chroot in when everything is initialized. It
+	# doesn't need to be populated if ngIRCd is compiled as a static
+	# binary. By default ngIRCd won't use the chroot() feature.
+	# ATTENTION: For this to work the server must have been started
+	# with root privileges!
+	;ChrootDir = /var/empty
 
 	# After <PingTimeout> seconds of inactivity the server will send a
 	# PING to the peer to test whether it is alive or not.
